# xml-doc

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: benchmark.yml  check.yml
benches/: Cargo.toml  bench.rs  cargo.toml  medium.xml  medium_utf16.xml  tiny.xml
src/: document.rs  element.rs  error.rs  lib.rs  parser.rs
tests/: test.rs  test_documents.rs  test_parse.rs  test_parse_write.rs  test_write.rs
tests/documents/: README.md  basic.xml  basic.yaml  basic1.yaml  basic2.xml  basic2.yaml  basic3.xml  basic3.yaml  basic4.xml  basic4.yaml  basic5.xml  basic5.yaml  basic6.xml  basic6.yaml  doc.xml  doc_.yaml  doc_etn.yaml  doc_etn_ignws.yaml  doc_etn_trim.yaml  doc_ignws.yaml  doc_trim.yaml  emptytag.xml  emptytag.yaml  emptytag_emptytext.yaml  encoding1.xml  encoding1.yaml  encoding2.xml  encoding2.yaml  error1.xml  error2.xml  namespace.xml  namespace.yaml  nodes.xml  nodes.yaml  nodes_noignws.yaml  nodes_notrim.yaml  standalone.xml  standalone.yaml  standalone1.xml  standalone1.yaml  (+3 more)
