[package]
name = "easy-xml"
version = "0.1.0"
authors = ["Yoonchae Lee <bluegreenmagick@gmail.com>"]
description = "Read, modify and write xml in tree-like structure."
edition = "2018"
repository = "https://github.com/bluegreenmagick/easy-xml"
license = "MIT OR Apache-2.0"
keywords = ["xml", "parser", "reader", "writer"]
categories = ["parser-implementations", "data-structures", "encoding"]

[dependencies]
quick-xml = "0.22"
encoding_rs = "0.8"

[dev-dependencies]
criterion = "0.3"
itertools = "0.10"
minidom = "0.12"
roxmltree = "0.14"
sxd-document = "0.3"
xmltree = "0.10"
xml_dom = "<= 0.2.3" # avoid quick-xml version conflict

[[bench]]
name = "bench"
harness = false