[package]
name = "benchmark"
version = "0.1.0"
edition = "2018"

[dev-dependencies]
easy-xml = {path = "../"}
criterion = "0.3"
minidom = "0.12"
roxmltree = "0.14"
xmltree = "0.10"
xml_dom = ">=0.2.5" # avoid quick-xml version conflict

[[bench]]
name = "bench"
path = "bench.rs"
harness = false

[lib]
path = "../src/lib.rs"


[dependencies]
quick-xml = "0.22"
encoding_rs = "0.8"