[package]
name = "benchmark"
version = "0.1.0"
edition = "2018"

[dependencies]
xml-doc = {path = "../"}
minidom = "0.12"
roxmltree = "0.14"
xmltree = "0.10"
xml_dom = ">=0.2.5" # avoid quick-xml version conflict
criterion = "0.3"
# parsers
xml5ever = "0.16"
markup5ever = "0.10"
quick-xml = "0.22"
RustyXML = {version = "0.3", package = "RustyXML" }
xml_rs = {version = "0.8", package = "xml-rs" }

[[bench]]
name = "bench"
path = "bench.rs"
harness = false
